# fastapi-clean-architecture-template

./: README.md  database.db  fast-api-hex.rar  pyproject.toml  pytest.ini  test.py
app/: main.py
app/api/v1/routes/: auth.py  role.py  user.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/db/seed/: role_seed.py  user_seed.py
app/enums/: role.py
app/middleware/: response_size_logger.py
app/models/: role.py  user.py
app/repositories/: role_repository.py  user_repository.py
app/schemas/: role.py  user.py
app/services/: role_service.py  user_service.py
tests/: conftest.py
tests/integration/user/: test_create_users.py  test_delete_users.py  test_get_users.py  test_list_users.py  test_update_users.py
